--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
+cassandra (4.0.4) UNRELEASED; urgency=medium
+
+  * New release
+
+ -- Mick Semb Wever <mck@apache.org>  Sun, 13 Feb 2022 22:37:37 +0100
+
 cassandra (4.0.3) unstable; urgency=medium
 
-  * New release 
+  * New release
 
  -- Mick Semb Wever <mck@apache.org>  Sun, 13 Feb 2022 22:37:37 +0100
 
